# FastAPI-Kafka-WebSockets

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
app/: kafka_test_consumer.py  kafka_test_produser.py  test_consumer.py  test_produser.py
app/application/api/: main.py  schemas.py
app/application/api/dependencies/: containers.py
app/application/api/messages/: filters.py  handlers.py  schemas.py
app/domain/entities/: base.py  messages.py
app/domain/events/: base.py  messages.py
app/domain/exceptions/: base.py  messages.py
app/domain/values/: base.py  messages.py
app/infra/message_brokers/: base.py  converters.py  kafka.py
app/infra/repositories/: messages.py
app/infra/repositories/messages/: base.py  converters.py  memory.py  mongo.py
app/logic/: __init__.py  mediator.py
app/logic/commands/: base.py  message.py
app/logic/events/: base.py  messages.py
app/logic/exceptions/: base.py  mediator.py  messages.py
app/logic/mediator/: base.py  command.py  event.py  query.py
app/logic/queries/: base.py  messages.py
app/settings/: config.py
app/tests/: conftest.py  fixtures.py
app/tests/aplications/api/: conftest.py  test_massages.py
app/tests/domain/values/: test_messages.py
app/tests/logic/: test_massages.py
docker_compose/: app.yml  kafka.yml  storages.yml
