[tool.poetry]
name = "fastapi-websockets-kafka"
version = "0.1.0"
description = ""
authors = ["0leksandrr <tsybulskyy.sasha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
ipython = "^8.26.0"
pytest = "^8.3.2"


[tool.poetry.group.dev.dependencies]
faker = "^28.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
