[tool.poetry]
name = "fastapi-websockets-kafka"
version = "0.1.0"
description = ""
authors = ["0leksandrr <tsybulskyy.sasha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
ipython = "^8.26.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
punq = "^0.7.0"
httpx = "^0.27.2"
motor = "^3.5.1"
pydantic-settings = "^2.5.2"
aiokafka = "^0.11.0"
orjson = "^3.10.7"


[tool.poetry.group.dev.dependencies]
faker = "^28.1.0"
mypy = "^1.11.2"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
ignore = ["E203", "E266", "E501", "W503"]
select = ["B", "C", "E", "F", "W", "T4", "B9"]


[tool.isort]
multi_line_output=3
include_trailing_comma=true
line_length=120
lines_after_imports=2
lines_between_sections=1
lines_between_types=0
force_alphabetical_sort_within_sections=true
ensure_newline_before_comments=true
combine_as_imports=true
combine_star=true
skip_gitignore=true
balanced_wrapping=true
force_grid_wrap=2
src_paths = ["app"]
skip_glob = [
    ".git",
    ".idea",
    ".vscode",
    "venv",
    ".venv",
    "*migrations*",
]
known_third_party = [
    "fastapi",
    "pydantic",
    "starlette",
]
known_first_party = [
    "app",
]
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
